src/tests/snapshots/linkblocks__tests__search__search_returns_no_results_when_no_match.snap
---
source: src/tests/search.rs
expression: html
---
  <head>
    <link rel="stylesheet" href="/assets/preflight.css" />
    <link rel="stylesheet" href="/assets/railwind.css" />
    <script src="/assets/htmx.1.9.9.js"></script>
    <meta name="color-scheme" content="dark" />
    <meta name="viewport" content="width=device-width,initial-scale=1" />
    <title>linkblocks</title>
  </head>
  <body class="w-full h-full text-gray-200 bg-neutral-800">
    <div class="flex-row-reverse h-full sm:flex">
      <main class="sm:overflow-y-auto sm:grow">
        <div class="p-2">
          <form action="/search" method="get" hx-boost="true" class="inline-flex w-full max-w-lg">
            <input type="text" name="q" placeholder="Search all bookmarks" value="nonexistent" class="py-1.5 px-3 bg-neutral-900 grow border rounded-l border-neutral-700" />
            <button class="px-2 text-neutral-400 shrink border-y border-r rounded-r border-neutral-700">
              Search
            </button>
          </form>
        </div>
        <section class="flex flex-row gap-2 justify-center w-full p-4 border-t border-neutral-700">
        </section>
      </main>
      <aside id="nav" class="bg-neutral-900 sm:max-w-[18rem] sm:w-1/3 sm:max-h-full flex flex-col sm:flex-col-reverse sm:border-r border-neutral-700 border-t sm:border-t-0">
        <div class="sm:overflow-y-auto sm:flex-1">
          <div class="sticky top-0 flex items-center justify-between px-2 pt-2 sm:top-0 bg-neutral-900">
            <h3 class="px-2 py-1 text-sm font-bold tracking-tight text-neutral-400">
              Lists
            </h3>
            <a href="/lists/create" class="block px-3 text-xl rounded hover:bg-neutral-800 text-neutral-400">+</a>
          </div>
          <ul class="pb-2">
            <li>
              <a class="block px-4 py-1 overflow-hidden text-ellipsis whitespace-nowrap hover:bg-neutral-800" href="/bookmarks/unsorted">Unsorted bookmarks</a>
            </li>
            <li>
              <a class="block px-4 py-1 overflow-hidden text-ellipsis whitespace-nowrap hover:bg-neutral-800 text-neutral-400" href="/lists/unpinned">Unpinned lists</a>
            </li>
          </ul>
        </div>
        <header class="sticky bottom-0 flex justify-between p-2 leading-8 bg-neutral-900">
          <a href="/user/testuser" class="px-2 font-bold rounded hover:bg-neutral-800">testuser</a>
          <form action="/logout" method="post">
            <button class="rounded px-3 text-neutral-400 hover:bg-neutral-800">
              Logout
            </button>
          </form>
        </header>
      </aside>
    </div>
  </body>
